@@ -1,3 +1,9 @@
+2006-10-16  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* BadRecursiveInvocationTest.cs: Modify existing test case to make 
+	sure parameter names aren't required to match in a recursive call
+	(e.g. calling base class).
+
 2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.
